Support credits to invoice

--- a/lib/payday/locale/de.yml
+++ b/lib/payday/locale/de.yml
@@ -12,6 +12,7 @@ de:
       due_date: "Fälligkeit:"
       paid_date: "Zahlungsdatum:"
       subtotal: "Zwischensumme:"
+      credit: "Kredit:"
       shipping: "Versand:"
       tax: "Steuern:"
       total: "Gesamt:"
