--- a/lib/payday/locale/en.yml
+++ b/lib/payday/locale/en.yml
@@ -11,6 +11,7 @@ en:
       due_date: "Due Date:"
       paid_date: "Paid Date:"
       subtotal: "Subtotal:"
+      credit: "Credit:"
       shipping: "Shipping:"
       tax: "Tax:"
       total: "Total:"
