--- a/lib/payday/locale/es.yml
+++ b/lib/payday/locale/es.yml
@@ -1,21 +1,22 @@
 es:
-  payday: 
-    status: 
+  payday:
+    status:
       overdue: RETRASADO
       paid: PAGADO
       refunded: REINTEGRADO
-    invoice: 
+    invoice:
       bill_to: Facturar a
       invoice_no: "Recibo #:"
       due_date: "Vencimiento:"
       ship_to: Enviar a
       paid_date: "Pagado en:"
       subtotal: "Subtotal:"
+      credit: "Crédito:"
       shipping: "Envío:"
       tax: "Impuesto:"
       total: "Total:"
       notes: "Notas"
-    line_item: 
+    line_item:
       description: Descripción
       unit_price: Precio por Unidad
       quantity: Cantidad
